# pavan

./: .env  .gitignore  .replit  main.py  package-lock.json  package.json  pyproject.toml  replit.md  tailwind.config.ts  users.json
.local/state/replit/agent/: .latest.json  progress_tracker.md
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: zoo_model_1758643193442.py
client/src/: App.tsx  index.css
client/src/components/: audio-recorder.tsx  observation-detail-modal.tsx  success-modal.tsx
client/src/components/ui/: calendar-custom.tsx
client/src/hooks/: use-auth.ts
client/src/lib/: audio-utils.ts
client/src/pages/: admin-dashboard.tsx  doctor-dashboard.tsx  landing.tsx  zookeeper-dashboard.tsx
reports/: keeper1_2025-09-10_1759139801645.txt  keeper1_2025-09-15_1758644703111_fallback.txt  keeper1_2025-09-18_1759139239407.txt  keeper1_2025-09-19_1759138613692.txt  keeper1_2025-10-15_1759262100139.txt
server/: db.ts  index.ts  requirements.txt  routes.ts  run_model.py  storage.ts  vite.ts  zoo_model.py
shared/: schema.ts
