[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.117.1",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.27",
    "librosa>=0.11.0",
    "pydantic>=2.11.9",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
    "uvicorn>=0.37.0",
]
